===========================
Isotope eCommerce Changelog
===========================

Version 
------------------------------
- Added: Hooks for altering product before output
- Fixed: Countries and shipping methods for payment modules are no longer mandatory
- Fixed: Subdivisions for shipping modules are now working correctly

Version 0.1.0 stable (2010-05-23)
------------------------------
- Initial stable release