@@ -456,11 +456,12 @@ CREATE TABLE `tl_iso_shipping_modules` (
   `tax_class` int(10) unsigned NOT NULL default '0',
   `countries` blob NULL,
   `subdivisions` longblob NULL,
-  `minimum_total` int(10) NOT NULL default '0',
-  `maximum_total` int(10) NOT NULL default '0',
+  `minimum_total` varchar(32) NOT NULL default '',
+  `maximum_total` varchar(32) NOT NULL default '',
   `price` float NOT NULL default '0',
   `surcharge_field` varchar(255) NOT NULL default '',
   `flatCalculation` varchar(10) NOT NULL default '',
+  `weight_unit` varchar(5) NOT NULL default '',
   `guests` char(1) NOT NULL default '',
   `protected` char(1) NOT NULL default '',
   `groups` blob NULL,
@@ -491,6 +492,9 @@ CREATE TABLE `tl_iso_shipping_options` (
   `rate` double NULL default NULL,
   `minimum_total` int(10) NOT NULL default '0',
   `maximum_total` int(10) NOT NULL default '0',
+  `weight_from` varchar(32) NOT NULL default '0',
+  `weight_to` varchar(32) NOT NULL default '0',
+  `enabled` char(1) NOT NULL default '',
   PRIMARY KEY  (`id`),
 ) ENGINE=MyISAM DEFAULT CHARSET=utf8;
 
