@@ -114,38 +114,56 @@ $GLOBALS['TL_DCA']['tl_iso_shipping_options'] = array
 		'name' => array
 		(
 			'label'                   => &$GLOBALS['TL_LANG']['tl_iso_shipping_options']['name'],
-			'exclude'                 => true,
 			'inputType'               => 'text',
 			'eval'                    => array('mandatory'=>true, 'maxlength'=>255)
 		),
 		'description' => array
 		(
 			'label'                   => &$GLOBALS['TL_LANG']['tl_iso_shipping_options']['description'],
-			'exclude'                 => true,
 			'inputType'               => 'textarea',
 			'eval'                    => array('maxlength'=>255)
 		),
 		'minimum_total' => array
 		(
 			'label'                   => &$GLOBALS['TL_LANG']['tl_iso_shipping_options']['minimum_total'],
-			'exclude'                 => true,
+			'default'                 => 0,
 			'inputType'               => 'text',
-			'eval'                    => array('maxlength'=>255, 'rgxp'=>'digit'),
+			'eval'                    => array('mandatory'=>true, 'maxlength'=>32, 'rgxp'=>'digit', 'tl_class'=>'w50'),
 		),
 		'maximum_total' => array
 		(
 			'label'                   => &$GLOBALS['TL_LANG']['tl_iso_shipping_options']['maximum_total'],
-			'exclude'                 => true,
+			'default'                 => 0,
 			'inputType'               => 'text',
-			'eval'                    => array('maxlength'=>255, 'rgxp'=>'digit'),
+			'eval'                    => array('mandatory'=>true, 'maxlength'=>32, 'rgxp'=>'digit', 'tl_class'=>'w50'),
 		),
 		'rate' => array
 		(
 			'label'                   => &$GLOBALS['TL_LANG']['tl_iso_shipping_options']['rate'],
-			'exclude'                 => true,
 			'inputType'               => 'text',
-			'eval'                    => array('mandatory'=>true, 'rgxp'=>digit)
-		)
+			'eval'                    => array('mandatory'=>true, 'rgxp'=>'digit', 'tl_class'=>'w50'),
+		),
+		
+		
+		'weight_from' => array
+		(
+			'label'                   => &$GLOBALS['TL_LANG']['tl_iso_shipping_options']['weight_from'],
+			'default'                 => 0,
+			'inputType'               => 'text',
+			'eval'                    => array('mandatory'=>true, 'maxlength'=>32, 'rgxp'=>'digit', 'tl_class'=>'w50'),
+		),
+		'weight_to' => array
+		(
+			'label'                   => &$GLOBALS['TL_LANG']['tl_iso_shipping_options']['weight_to'],
+			'default'                 => 0,
+			'inputType'               => 'text',
+			'eval'                    => array('mandatory'=>true, 'maxlength'=>32, 'rgxp'=>'digit', 'tl_class'=>'w50'),
+		),
+		'enabled' => array
+		(
+			'label'                   => &$GLOBALS['TL_LANG']['tl_iso_shipping_options']['enabled'],
+			'inputType'               => 'checkbox',
+		),
 	)
 );
 
