@@ -36,6 +36,9 @@ $GLOBALS['TL_LANG']['tl_iso_shipping_options']['description']		= array('Descript
 $GLOBALS['TL_LANG']['tl_iso_shipping_options']['minimum_total']		= array('Minimum total', '');
 $GLOBALS['TL_LANG']['tl_iso_shipping_options']['maximum_total']		= array('Maximum total', '');
 
+$GLOBALS['TL_LANG']['tl_iso_shipping_options']['weight_from']		= array('Weight from', 'If overall weight of all products in cart is more than this, the rate will match. Make sure you set the correct weight unit in module settings.');
+$GLOBALS['TL_LANG']['tl_iso_shipping_options']['weight_to']			= array('Weight to', 'If overall weight of all products in cart is less than this, the rate will match. Make sure you set the correct weight unit in module settings.');
+
 
 /**
  * Reference
@@ -44,16 +47,16 @@ $GLOBALS['TL_LANG']['tl_iso_shipping_options']['maximum_total']		= array('Maximu
 /** 
  * Legends
  */
-$GLOBALS['TL_LANG']['tl_iso_shipping_options']['configuration_legend'] = "General configuration";
-$GLOBALS['TL_LANG']['tl_iso_shipping_options']['general_legend'] = "General information";
+$GLOBALS['TL_LANG']['tl_iso_shipping_options']['general_legend']	= 'General information';
+$GLOBALS['TL_LANG']['tl_iso_shipping_options']['config_legend']		= 'Configuration';
 
 
 /**
  * Buttons
  */
-$GLOBALS['TL_LANG']['tl_iso_shipping_options']['new']    = array('New Shipping Rate', 'Create a new Shipping Rate');
-$GLOBALS['TL_LANG']['tl_iso_shipping_options']['edit']   = array('Edit Shipping Rate', 'Edit Shipping Rate ID %s');
-$GLOBALS['TL_LANG']['tl_iso_shipping_options']['copy']   = array('Copy Shipping Rate', 'Copy Shipping Rate ID %s');
-$GLOBALS['TL_LANG']['tl_iso_shipping_options']['delete'] = array('Delete Shipping Rate', 'Delete Shipping Rate ID %s');
-$GLOBALS['TL_LANG']['tl_iso_shipping_options']['show']   = array('Shipping Rate Details', 'Show details of Shipping Rate ID %s');
+$GLOBALS['TL_LANG']['tl_iso_shipping_options']['new']				= array('New Shipping Rate', 'Create a new Shipping Rate');
+$GLOBALS['TL_LANG']['tl_iso_shipping_options']['edit']				= array('Edit Shipping Rate', 'Edit Shipping Rate ID %s');
+$GLOBALS['TL_LANG']['tl_iso_shipping_options']['copy']				= array('Copy Shipping Rate', 'Copy Shipping Rate ID %s');
+$GLOBALS['TL_LANG']['tl_iso_shipping_options']['delete']			= array('Delete Shipping Rate', 'Delete Shipping Rate ID %s');
+$GLOBALS['TL_LANG']['tl_iso_shipping_options']['show']				= array('Shipping Rate Details', 'Show details of Shipping Rate ID %s');
 
